If a line is partially selected and is the first in a multi-line selection, we have to fill the right side with the selection color.

BUG: 130015

svn path=/branches/KDE/3.5/kdelibs/; revision=556297